unpackaged/main/default/objects/ffirule__IntegrationRuleTargetLineItemTest__c/fields/ffirule__ALookupField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__ALookupField__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>A Lookup Field</label>
    <referenceTo>ffirule__IntegrationRuleLineLookupTest__c</referenceTo>
    <relationshipLabel>Integration Rule Target Line Item Tests</relationshipLabel>
    <relationshipName>Integration_RuleTargetLineItemTests</relationshipName>
    <type>Lookup</type>
</CustomField>