unpackaged/main/default/objects/ffirule__IntegrationRuleTargetLineItemTest__c/fields/ffirule__AnotherStatus__c.field-meta.xml
<CustomField>
    <fullName>ffirule__AnotherStatus__c</fullName>
    <formula>TEXT(ffirule__IntegrationRuleTargetTest__r.ffirule__AnotherStatus__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Another Status</label>
    <type>Text</type>
</CustomField>