unpackaged/main/default/objects/ffirule__IntegrationRuleTargetLineItemTest__c/fields/ffirule__AnotherTextField__c.field-meta.xml
<CustomField>
    <fullName>ffirule__AnotherTextField__c</fullName>
    <label>Another Text Field</label>
    <length>32</length>
    <type>Text</type>
</CustomField>