unpackaged/main/default/objects/ffirule__IntegrationRuleTargetLineItemTest__c/fields/ffirule__IntegrationRuleSourceLineItemTest__c.field-meta.xml
<CustomField>
    <fullName>ffirule__IntegrationRuleSourceLineItemTest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ClickLink Source Line Item Test</label>
    <referenceTo>ffirule__IntegrationRuleSourceLineItemTest__c</referenceTo>
    <relationshipLabel>ClickLink Target Line Item Tests</relationshipLabel>
    <relationshipName>IntegrationRuleTargetLineItemTests</relationshipName>
    <type>Lookup</type>
</CustomField>