unpackaged/main/default/objects/ffirule__IntegrationRuleTargetLineItemTest__c/fields/ffirule__Number16__c.field-meta.xml
<CustomField>
    <fullName>ffirule__Number16__c</fullName>
    <label>Number16</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>