unpackaged/main/default/objects/ffirule__IntegrationRuleTargetLineItemTest__c/fields/ffirule__Status__c.field-meta.xml
<CustomField>
    <fullName>ffirule__Status__c</fullName>
    <formula>TEXT(ffirule__IntegrationRuleTargetTest__r.ffirule__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>