unpackaged/main/default/objects/ffirule__IntegrationRuleTargetLineItemTest__c/fields/ffirule__Syncing__c.field-meta.xml
<CustomField>
    <fullName>ffirule__Syncing__c</fullName>
    <formula>IF(ffirule__IntegrationRuleTargetTest__r.ffirule__Syncing__c, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Syncing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>